--- a/progetto-frontend-vanilla/index.html
+++ b/progetto-frontend-vanilla/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <title>Lin | <%= packageVersion %>/<%= designSystemVersion %></title>
     <meta charset="utf-8" />
   </head>
   <body>
